# memoire-master-rl-logistique

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-business-and-data-understanding.ipynb
references/: README.md
references/1-etat-de-art-fms/: fiches-lecture.ipynb  fiches_lecture_fms.ipynb
references/2-methodes-classiques-baselines/: fiches-lecture.ipynb  fiches_lecture_baselines.ipynb
references/3-rl-nouvelles-approches/: fiches-lecture.ipynb  fiches_lecture_rl.ipynb
references/4-etudes-cas-complementaires/: fiches-lecture.ipynb  fiches_lecture_etudes_cas.ipynb
