[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "memoire_master_rl_logistique"
version = "0.0.1"
description = "Impl\u00e9mentation d'un agent d'apprentissage par renforcement pour l'optimisation de la logistique mini\u00e8re."
authors = [
  { name = "Jean-Luc Mupasa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.11.11"


[tool.ruff]
line-length = 99
src = ["memoire_master_rl_logistique"]
include = ["pyproject.toml", "memoire_master_rl_logistique/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["memoire_master_rl_logistique"]
force-sort-within-sections = true

